--- a/EncourageWork/res/layout/activity_encourage_work.xml
+++ b/EncourageWork/res/layout/activity_encourage_work.xml
@@ -47,8 +47,15 @@
 	        android:id="@+id/complete"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
+	        android:layout_gravity="center_horizontal"
 	        android:checked="false"
 	        android:text="@string/check_complete" />
+
+	    <Button
+	        android:id="@+id/save"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:text="Save" />
 	
 	</LinearLayout>
 </ScrollView>
