Preliminary version of fragment_assignment_detail.xml complete. Will polish later when app can be run on device

--- a/EncourageWork/res/layout/fragment_assignment_detail.xml
+++ b/EncourageWork/res/layout/fragment_assignment_detail.xml
@@ -1,8 +1,55 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/assignment_detail"
-    style="?android:attr/textAppearanceLarge"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context=".AssignmentDetailFragment" />
+    android:layout_height="wrap_content" >
+
+    <TableLayout
+        android:id="@+id/details"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:shrinkColumns="1"
+        android:stretchColumns="1" >
+
+        <TableRow>
+
+            <EditText
+                android:id="@+id/name"
+                android:layout_weight="3"
+                android:ems="10"
+                android:hint="@string/assignment_name_field"
+                android:inputType="textCapWords"
+                android:textStyle="bold" />
+
+            <ToggleButton
+                android:id="@+id/complete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:checked="false"
+                android:text="ToggleButton"
+                android:textOff="Incomplete"
+                android:textOn="Done!" />
+
+        </TableRow>
+
+        <TableRow>
+
+            <DatePicker
+                android:id="@+id/date_picker" />
+
+        </TableRow>
+
+        <TableRow>
+
+            <EditText
+                android:id="@+id/notes"
+                android:ems="10"
+                android:hint="@string/notes_hint"
+                android:inputType="textMultiLine" >
+
+            </EditText>
+
+        </TableRow>
+
+    </TableLayout>
+    
+</ScrollView>
