--- a/EncourageWork/res/layout/row.xml
+++ b/EncourageWork/res/layout/row.xml
@@ -1,35 +1,45 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:padding="4dip" >
 
-    <TableLayout
-        android:id="@+id/TableLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
 
-        <TableRow>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.75"
+            android:orientation="vertical" >
+
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:ellipsize="end"
-                android:maxLines="1"
+                android:layout_height="wrap_content"
                 android:text="TextView"
-                android:textColor="#000000"
                 android:textStyle="bold" />
 
-            <CheckBox
-                android:id="@+id/check_complete"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:checked="false"
-                android:maxLines="1" />
+                android:layout_height="wrap_content" >
 
-        </TableRow>
+                <TextView
+                    android:id="@+id/due_tag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/due_tag" />
 
-    </TableLayout>
+                <TextView
+                    android:id="@+id/due_date_row"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
 
-</LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/check_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false" />
+
+    </LinearLayout>
