--- a/EncourageWork/res/layout/fragment_assignment_detail.xml
+++ b/EncourageWork/res/layout/fragment_assignment_detail.xml
@@ -1,55 +1,44 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/details"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
 
-    <TableLayout
-        android:id="@+id/details"
+    <EditText
+        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:shrinkColumns="1"
-        android:stretchColumns="1" >
+        android:layout_weight="1"
+        android:ems="10"
+        android:hint="@string/assignment_name_field"
+        android:inputType="textCapWords"
+        android:textStyle="bold" >
 
-        <TableRow>
+        <requestFocus />
+    </EditText>
 
-            <EditText
-                android:id="@+id/name"
-                android:layout_weight="3"
-                android:ems="10"
-                android:hint="@string/assignment_name_field"
-                android:inputType="textCapWords"
-                android:textStyle="bold" />
+    <EditText
+        android:id="@+id/notes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:ems="10"
+        android:hint="@string/notes_hint"
+        android:inputType="textMultiLine" />
 
-            <ToggleButton
-                android:id="@+id/complete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:checked="false"
-                android:text="ToggleButton"
-                android:textOff="Incomplete"
-                android:textOn="Done!" />
+    <DatePicker
+        android:id="@+id/date_picker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
 
-        </TableRow>
+    <ToggleButton
+        android:id="@+id/toggleButton1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:checked="false"
+        android:textOff="@string/complete_toggle_off"
+        android:textOn="@string/complete_toggle_on" />
 
-        <TableRow>
-
-            <DatePicker
-                android:id="@+id/date_picker" />
-
-        </TableRow>
-
-        <TableRow>
-
-            <EditText
-                android:id="@+id/notes"
-                android:ems="10"
-                android:hint="@string/notes_hint"
-                android:inputType="textMultiLine" >
-
-            </EditText>
-
-        </TableRow>
-
-    </TableLayout>
-    
-</ScrollView>
+</LinearLayout>
