--- a/EncourageWork/res/layout/fragment_assignment_detail.xml
+++ b/EncourageWork/res/layout/fragment_assignment_detail.xml
@@ -33,7 +33,7 @@
         android:layout_weight="1" />
 
     <ToggleButton
-        android:id="@+id/toggleButton1"
+        android:id="@+id/complete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
